--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "uview-ui": "^2.0.31"
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "image-tools": "^1.4.0"
   }
 }
