--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "dependencies": {
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "image-tools": "^1.4.0",
+    "npm": "^8.11.0",
     "three": "^0.140.2",
     "three-obj-mtl-loader": "^1.0.3",
-    "u-qrcode": "^3.2.2"
+    "u-qrcode": "^3.2.2",
+    "video.js": "^7.19.2"
   }
 }
