--- a/manifest.json
+++ b/manifest.json
@@ -76,5 +76,13 @@
             }
         },
         "title" : "金裕天成"
+    },
+    "plus" : {
+        "splashscreen" : {
+            "autoclose" : true, /*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
+            "waiting" : true /*是否在程序启动界面显示等待雪花，true表示显示，false表示不显示。*/
+        },
+        "allowsInlineMediaPlayback" : true, /*设置ios下允许内联播放*/
+        "popGesture" : "close"
     }
 }
