--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "file-saver": "^2.0.5",
     "fingerprintjs2": "^2.1.4",
     "html2canvas": "^1.4.1",
+    "jweixin-module": "^1.6.0",
     "mui-player": "^1.6.1",
     "three": "^0.140.2",
     "three-obj-mtl-loader": "^1.0.3",
