微信授权快捷登录+微信、QQ分享

--- a/manifest.json
+++ b/manifest.json
@@ -75,7 +75,18 @@
                 "enable" : true
             }
         },
-        "title" : "金裕天成"
+        "title" : "金裕天成",
+        "template" : "index.html",
+        "sdkConfigs" : {
+            "maps" : {
+                "google" : {
+                    "key" : ""
+                }
+            }
+        },
+        "router" : {
+            "mode" : "history"
+        }
     },
     "plus" : {
         "splashscreen" : {
