--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "jinyu-h5",
-    "appid" : "__UNI__53F6F12",
+    "appid" : "__UNI__8774D5F",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
