--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,11 @@
             /* SDK配置 */
             "sdkConfigs" : {
                 "ad" : {}
+            },
+            "icons" : {
+                "android" : {
+                    "hdpi" : ""
+                }
             }
         }
     },
