--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jweixin-module": "^1.6.0",
     "mui-player": "^1.6.1",
     "three": "^0.140.2",
-    "three-obj-mtl-loader": "^1.0.3"
+    "three-obj-mtl-loader": "^1.0.3",
+    "uqrcodejs": "^4.0.7"
   }
 }
